# directshow_camera

./: .gitignore  CMakeLists.txt  README.md
cmake/: InstallVcpkgOpenCV.cmake
examples/: CMakeLists.txt  eg10_dual_arpara_camera.cpp  eg10_dual_arpara_camera.h  eg7_arpara_camera.cpp  eg7_arpara_camera.h  eg8_direct_arpara_camera.cpp  eg8_direct_arpara_camera.h  eg9_direct_arpara_camera.cpp  eg9_direct_arpara_camera.h  example.cpp
experiments/: CMakeLists.txt  displayfps.cpp
include/directshow_camera/: abstract_ds_camera.h  arpara_camera.h  arpara_quad_camera.h  ds_camera.h  ds_camera_device.h  ds_camera_stub.h  ds_grabber_callback.h  ds_libs_setting.h  ds_libs_setting.h.in  uvc_camera.h
src/: CMakeLists.txt  arpara_camera.cpp  arpara_quad_camera.cpp  ds_camera.cpp  ds_camera_device.cpp  ds_camera_stub.cpp  ds_camera_utils.cpp  ds_grabber_callback.cpp  uvc_camera.cpp
test/: CMakeLists.txt
